--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Acceso denegado</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Google sing-in</title>
+  </head>
+  <body>
+    <h1>Google singin</h1>
+    <hr />
+
+    <div
+      id="g_id_onload"
+      data-client_id="241017935846-ml4k5ehfn7a9hs42h7v70iia80ln95i8.apps.googleusercontent.com"
+      data-auto_prompt="false"
+      data-callback="handleCredentialResponse"
+    ></div>
+    <div
+      class="g_id_signin"
+      data-type="standard"
+      data-size="large"
+      data-theme="outline"
+      data-text="sign_in_with"
+      data-shape="rectangular"
+      data-logo_alignment="left"
+    ></div>
+
+    <script
+      src="https://accounts.google.com/gsi/client"
+      onload="console.log('TODO: add onload function')"
+    ></script>
+
+    <script>
+      function handleCredentialResponse(response) {
+        //Google token
+        //    console.log('id-token',response.credential);
+
+        fetch("http://localhost:5000/api/auth/google", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({id_token: response.credential})
+        })
+          .then((res) => res.json())
+          .then((res) => {
+            console.log(res);
+          })
+          .catch((err) => {
+            console.log(err);
+          });
+      }
+    </script>
+  </body>
 </html>
