--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,8 @@
       data-logo_alignment="left"
     ></div>
 
+    <button id="btn-logout">Logout</button>
+
     <script
       src="https://accounts.google.com/gsi/client"
       onload="console.log('TODO: add onload function')"
@@ -38,16 +40,26 @@
         fetch("http://localhost:5000/api/auth/google", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({id_token: response.credential})
+          body: JSON.stringify({ id_token: response.credential }),
         })
           .then((res) => res.json())
           .then((res) => {
             console.log(res);
+            localStorage.setItem("email", res.user.email);
           })
           .catch((err) => {
             console.log(err);
           });
       }
+
+      const buttonLogout = document.getElementById("btn-logout");
+      buttonLogout.onclick = () => {
+        google.accounts.id.disableAutoSelect();
+        const userEmail = localStorage.getItem("email");
+        google.accounts.id.revoke(userEmail);
+        localStorage.clear();
+        location.reload();
+      };
     </script>
   </body>
 </html>
